--- a/src/SFA.DAS.RAA.Api.UnitTests/packages.config
+++ b/src/SFA.DAS.RAA.Api.UnitTests/packages.config
@@ -3,6 +3,9 @@
   <package id="AutoFixture" version="3.50.2" targetFramework="net452" />
   <package id="Castle.Core" version="3.3.3" targetFramework="net452" />
   <package id="FluentAssertions" version="4.17.0" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
   <package id="Moq" version="4.5.28" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
   <package id="NUnit" version="3.5.0" targetFramework="net452" />
 </packages>
