Lots of little fixes

--- a/src/SFA.Apprenticeships.Web.Common/SFA.Apprenticeships.Web.Common.csproj
+++ b/src/SFA.Apprenticeships.Web.Common/SFA.Apprenticeships.Web.Common.csproj
@@ -378,10 +378,10 @@
     <None Include="Content\scss\styles.scss" />
     <None Include="Content\scss\_address-service-styles.scss" />
     <None Include="Content\scss\_forms.scss" />
+    <None Include="Content\scss\_govuk-custom.scss" />
     <None Include="Content\scss\_joyride-styles.scss" />
     <None Include="Content\scss\_link-styles.scss" />
     <None Include="Content\scss\_page-nav.scss" />
-    <None Include="Content\scss\_progress-indicator-styles.scss" />
     <None Include="Content\scss\_select2-styles.scss" />
     <None Include="Content\scss\_sfa-custom-layouts.scss" />
     <None Include="Content\scss\_button-links.scss" />
