ra-560: Prepare for vacancy tracker mapping.

--- a/src/SFA.Apprenticeships.Domain.Raa.Interfaces/SFA.Apprenticeships.Domain.Raa.Interfaces.csproj
+++ b/src/SFA.Apprenticeships.Domain.Raa.Interfaces/SFA.Apprenticeships.Domain.Raa.Interfaces.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Reporting\Models\ReportRegisteredCandidatesResultItem.cs" />
     <Compile Include="Reporting\Models\ReportSuccessfulCandidatesResultItem.cs" />
     <Compile Include="Reporting\Models\ReportUnsuccessfulCandidatesResultItem.cs" />
+    <Compile Include="Reporting\Models\ReportVacancyTrackerResultItem.cs" />
     <Compile Include="Reporting\Models\ReportVacanciesResultItem.cs" />
     <Compile Include="Reporting\Models\ReportVacancyExtensionsResultItem.cs" />
     <Compile Include="Repositories\IAgencyUserRepository.cs" />
