--- a/src/SFA.DAS.RAA.Api.Client.V1/SFA.DAS.RAA.Api.Client.V1.csproj
+++ b/src/SFA.DAS.RAA.Api.Client.V1/SFA.DAS.RAA.Api.Client.V1.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Models\PostalAddress.cs" />
     <Compile Include="Models\Vacancy.cs" />
     <Compile Include="Models\Wage.cs" />
+    <Compile Include="Models\WageUpdate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
