--- a/src/SFA.Apprenticeships.Web.Common.UnitTests/packages.config
+++ b/src/SFA.Apprenticeships.Web.Common.UnitTests/packages.config
@@ -10,5 +10,6 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
   <package id="Moq" version="4.5.19" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net451" />
   <package id="NUnit" version="3.4.1" targetFramework="net451" />
 </packages>
