RA-388: Adding edit wage page

--- a/src/SFA.Apprenticeships.Web.Raa.Common/SFA.Apprenticeships.Web.Raa.Common.csproj
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/SFA.Apprenticeships.Web.Raa.Common.csproj
@@ -354,7 +354,8 @@
     <Compile Include="ViewModels\Provider\ProviderSiteSearchResultsViewModel.cs" />
     <Compile Include="ViewModels\Report\ReportParameterBase.cs" />
     <Compile Include="ViewModels\Application\BulkDeclineCandidatesViewModel.cs" />
-    <Compile Include="ViewModels\Vacancy\DeleteVacancyViewModel.cs" />
+    <Compile Include="ViewModels\VacancyManagement\EditWageViewModel.cs" />
+    <Compile Include="ViewModels\VacancyManagement\DeleteVacancyViewModel.cs" />
     <Compile Include="ViewModels\VacancyPosting\VacancyMinimumData.cs" />
     <Compile Include="ViewModels\VacancyStatus\ArchiveVacancyViewModel.cs" />
     <Compile Include="ViewModels\Vacancy\ApplicationsLinkViewModel.cs" />
