RA-388: Using the MsTest unit test provider for specflow

--- a/src/SFA.DAS.RAA.Api.AcceptanceTests/packages.config
+++ b/src/SFA.DAS.RAA.Api.AcceptanceTests/packages.config
@@ -20,6 +20,7 @@
   <package id="RestSharp" version="105.2.3" targetFramework="net452" />
   <package id="SlowCheetah" version="2.5.15" targetFramework="net452" />
   <package id="SpecFlow" version="2.2.0-preview20161020" targetFramework="net452" />
+  <package id="SpecFlow.MsTest" version="2.2.0-preview20161020" targetFramework="net452" />
   <package id="SpecFlow.NUnit" version="2.2.0-preview20161020" targetFramework="net452" />
   <package id="structuremap" version="3.1.6.186" targetFramework="net452" />
 </packages>
