--- a/src/SFA.DAS.RAA.Api.AcceptanceTests/App.config
+++ b/src/SFA.DAS.RAA.Api.AcceptanceTests/App.config
@@ -8,7 +8,7 @@
   </appSettings>
   <specFlow>
     <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
-    <unitTestProvider name="NUnit" />
+    <unitTestProvider name="MsTest" />
   </specFlow>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
