--- a/src/SFA.DAS.RAA.Api.UnitTests/SFA.DAS.RAA.Api.UnitTests.csproj
+++ b/src/SFA.DAS.RAA.Api.UnitTests/SFA.DAS.RAA.Api.UnitTests.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ApiKeyAuthenticationServiceTests.cs" />
     <Compile Include="Strategies\EditWageStrategyTests.cs" />
+    <Compile Include="Validators\EmployerProviderSiteLinkValidatorTests.cs" />
     <Compile Include="Validators\WageUpdateValidatorAmountTests.cs" />
     <Compile Include="Validators\WageUpdateValidatorTypeTests.cs" />
   </ItemGroup>
