--- a/src/SFA.Apprenticeships.Application.Provider/SFA.Apprenticeships.Application.Provider.csproj
+++ b/src/SFA.Apprenticeships.Application.Provider/SFA.Apprenticeships.Application.Provider.csproj
@@ -97,6 +97,10 @@
     <Compile Include="ProviderVacancyAuthorisationService.cs" />
     <Compile Include="ProviderService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Strategies\GetOwnedProviderSitesStrategy.cs" />
+    <Compile Include="Strategies\GetVacancyOwnerRelationshipStrategy.cs" />
+    <Compile Include="Strategies\IGetOwnedProviderSitesStrategy.cs" />
+    <Compile Include="Strategies\IGetVacancyOwnerRelationshipStrategy.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SFA.Apprenticeships.Application.Interfaces\SFA.Apprenticeships.Application.Interfaces.csproj">
