--- a/src/SFA.DAS.RAA.Api/SFA.DAS.RAA.Api.csproj
+++ b/src/SFA.DAS.RAA.Api/SFA.DAS.RAA.Api.csproj
@@ -271,6 +271,8 @@
     <Compile Include="Startup.cs" />
     <Compile Include="Strategies\EditWageStrategy.cs" />
     <Compile Include="Strategies\IEditWageStrategy.cs" />
+    <Compile Include="Strategies\ILinkEmployerStrategy.cs" />
+    <Compile Include="Strategies\LinkEmployerStrategy.cs" />
     <Compile Include="Validators\EmployerProviderSiteLinkValidator.cs" />
   </ItemGroup>
   <ItemGroup>
