--- a/src/SFA.DAS.RAA.Api/Web.Prod.config
+++ b/src/SFA.DAS.RAA.Api/Web.Prod.config
@@ -28,4 +28,20 @@
       </customErrors>
     -->
   </system.web>
+
+  <system.webServer>
+    <rewrite xdt:Transform="Insert">
+      <rules>
+        <!-- BEGIN rule TAG FOR HTTPS REDIRECT -->
+        <rule name="Force HTTPS" enabled="true">
+          <match url="(.*)" ignoreCase="false" />
+          <conditions>
+            <add input="{HTTPS}" pattern="off" />
+          </conditions>
+          <action type="Redirect" url="https://{HTTP_HOST}/{R:1}" appendQueryString="true" redirectType="Permanent" />
+        </rule>
+        <!-- END rule TAG FOR HTTPS REDIRECT -->
+      </rules>
+    </rewrite>
+  </system.webServer>
 </configuration>
