--- a/src/SFA.Apprenticeships.Web.Common/SFA.Apprenticeships.Web.Common.csproj
+++ b/src/SFA.Apprenticeships.Web.Common/SFA.Apprenticeships.Web.Common.csproj
@@ -400,27 +400,8 @@
     <Content Include="Content\libs\locationAutocomplete.js" />
     <Content Include="Content\libs\lookupService.js" />
     <Content Include="Content\libs\maps.js" />
-    <Content Include="Content\libs\nas\application\applicationform.js" />
-    <Content Include="Content\libs\nas\application\dirtyFormDialog.js" />
-    <Content Include="Content\libs\nas\apprenticeships\saveVacancy.js" />
-    <Content Include="Content\libs\nas\autosave.js" />
-    <Content Include="Content\libs\nas\basicVacancyDetails.js" />
     <Content Include="Content\libs\nas\candidates.js" />
-    <Content Include="Content\libs\nas\dashboard.js" />
-    <Content Include="Content\libs\nas\geoLocater.js" />
-    <Content Include="Content\libs\nas\headerContext.js" />
-    <Content Include="Content\libs\nas\locationAutocomplete.js" />
-    <Content Include="Content\libs\nas\lookupService.js" />
     <Content Include="Content\libs\nas\multilocation.js" />
-    <Content Include="Content\libs\nas\refineSearch.js" />
-    <Content Include="Content\libs\nas\reports.js" />
-    <Content Include="Content\libs\nas\resultsMap.js" />
-    <Content Include="Content\libs\nas\resultsSearch.js" />
-    <Content Include="Content\libs\nas\searchTour.js" />
-    <Content Include="Content\libs\nas\tabbedContent.js" />
-    <Content Include="Content\libs\nas\vacancyApplications.js" />
-    <Content Include="Content\libs\nas\validationscripts.js" />
-    <Content Include="Content\libs\nas\webTrendsInlineTrack.js" />
     <Content Include="Content\libs\old-browsers.js" />
     <Content Include="Content\libs\print.js" />
     <Content Include="Content\libs\prototype-recruit.js" />
@@ -690,6 +671,27 @@
     <Content Include="Content\libs\webtrends\webtrends.load.min.js" />
     <Content Include="Content\libs\webtrends\webtrends.min.js" />
     <Content Include="Content\libs\webtrends\webtrends.stub.js" />
+    <Content Include="Content\projectjs\Find\application\applicationform.js" />
+    <Content Include="Content\projectjs\Find\application\dirtyFormDialog.js" />
+    <Content Include="Content\projectjs\Find\apprenticeships\saveVacancy.js" />
+    <Content Include="Content\projectjs\Find\geoLocater.js" />
+    <Content Include="Content\projectjs\Find\headerContext.js" />
+    <Content Include="Content\projectjs\Find\locationAutocomplete.js" />
+    <Content Include="Content\projectjs\Find\lookupService.js" />
+    <Content Include="Content\projectjs\Find\refineSearch.js" />
+    <Content Include="Content\projectjs\Find\resultsMap.js" />
+    <Content Include="Content\projectjs\Find\resultsSearch.js" />
+    <Content Include="Content\projectjs\Find\searchTour.js" />
+    <Content Include="Content\projectjs\Find\tabbedContent.js" />
+    <Content Include="Content\projectjs\Find\webTrendsInlineTrack.js" />
+    <Content Include="Content\projectjs\Manage\basicVacancyDetails.js" />
+    <Content Include="Content\projectjs\Manage\dashboard.js" />
+    <Content Include="Content\projectjs\Manage\validationscripts.js" />
+    <Content Include="Content\projectjs\Recruit\autosave.js" />
+    <Content Include="Content\projectjs\Recruit\basicVacancyDetails.js" />
+    <Content Include="Content\projectjs\Recruit\dashboard.js" />
+    <Content Include="Content\projectjs\Recruit\reports.js" />
+    <Content Include="Content\projectjs\Recruit\vacancyApplications.js" />
     <Content Include="gulpfile.js" />
     <Content Include="Views\Shared\DisplayTemplates\Date.cshtml">
       <Generator>RazorGenerator</Generator>
