Correctly reporting invalid addresses from EDRS via the API

--- a/src/SFA.Apprenticeships.Application.Employer/SFA.Apprenticeships.Application.Employer.csproj
+++ b/src/SFA.Apprenticeships.Application.Employer/SFA.Apprenticeships.Application.Employer.csproj
@@ -100,12 +100,14 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\SharedAssemblyInfo.cs">
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="EmployerService.cs" />
+    <Compile Include="ErrorCodes.cs" />
     <Compile Include="IoC\EmployerServiceRegistry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Strategies\GetByEdsUrnStrategy.cs" />
