RA-388: Additional validation

--- a/src/SFA.Apprenticeships.Web.Recruit/SFA.Apprenticeships.Web.Recruit.csproj
+++ b/src/SFA.Apprenticeships.Web.Recruit/SFA.Apprenticeships.Web.Recruit.csproj
@@ -412,6 +412,7 @@
     <Compile Include="Mediators\VacancyStatus\VacancyStatusMediatorCodes.cs" />
     <Compile Include="Mediators\VacancyStatus\VacancyStatusMediator.cs" />
     <Compile Include="Validators\ContactMessageViewModelValidator.cs" />
+    <Compile Include="Validators\EditWageViewModelValidator.cs" />
     <Compile Include="ViewModels\AuthorizeResponseViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
