Fixing javascript errors on all three sites

--- a/src/SFA.Apprenticeships.Web.Candidate/SFA.Apprenticeships.Web.Candidate.csproj
+++ b/src/SFA.Apprenticeships.Web.Candidate/SFA.Apprenticeships.Web.Candidate.csproj
@@ -719,13 +719,21 @@
     <Content Include="Content\_assets\js\locationAutocomplete.js" />
     <Content Include="Content\_assets\js\lookupService.js" />
     <Content Include="Content\_assets\js\maps.js" />
-    <Content Include="Content\_assets\js\nas\autosave.js" />
-    <Content Include="Content\_assets\js\nas\basicVacancyDetails.js" />
+    <Content Include="Content\_assets\js\nas\application\applicationform.js" />
+    <Content Include="Content\_assets\js\nas\application\dirtyFormDialog.js" />
+    <Content Include="Content\_assets\js\nas\apprenticeships\saveVacancy.js" />
     <Content Include="Content\_assets\js\nas\candidates.js" />
-    <Content Include="Content\_assets\js\nas\dashboard.js" />
+    <Content Include="Content\_assets\js\nas\geoLocater.js" />
+    <Content Include="Content\_assets\js\nas\headerContext.js" />
+    <Content Include="Content\_assets\js\nas\locationAutocomplete.js" />
+    <Content Include="Content\_assets\js\nas\lookupService.js" />
     <Content Include="Content\_assets\js\nas\multilocation.js" />
-    <Content Include="Content\_assets\js\nas\reports.js" />
-    <Content Include="Content\_assets\js\nas\vacancyApplications.js" />
+    <Content Include="Content\_assets\js\nas\refineSearch.js" />
+    <Content Include="Content\_assets\js\nas\resultsMap.js" />
+    <Content Include="Content\_assets\js\nas\resultsSearch.js" />
+    <Content Include="Content\_assets\js\nas\searchTour.js" />
+    <Content Include="Content\_assets\js\nas\tabbedContent.js" />
+    <Content Include="Content\_assets\js\nas\webTrendsInlineTrack.js" />
     <Content Include="Content\_assets\js\old-browsers.js" />
     <Content Include="Content\_assets\js\print.js" />
     <Content Include="Content\_assets\js\prototype-recruit.js" />
