--- a/src/SFA.Apprenticeships.Web.Manage/SFA.Apprenticeships.Web.Manage.csproj
+++ b/src/SFA.Apprenticeships.Web.Manage/SFA.Apprenticeships.Web.Manage.csproj
@@ -887,13 +887,11 @@
     <Content Include="Content\_assets\js\locationAutocomplete.js" />
     <Content Include="Content\_assets\js\lookupService.js" />
     <Content Include="Content\_assets\js\maps.js" />
-    <Content Include="Content\_assets\js\nas\autosave.js" />
     <Content Include="Content\_assets\js\nas\basicVacancyDetails.js" />
     <Content Include="Content\_assets\js\nas\candidates.js" />
     <Content Include="Content\_assets\js\nas\dashboard.js" />
     <Content Include="Content\_assets\js\nas\multilocation.js" />
-    <Content Include="Content\_assets\js\nas\reports.js" />
-    <Content Include="Content\_assets\js\nas\vacancyApplications.js" />
+    <Content Include="Content\_assets\js\nas\validationscripts.js" />
     <Content Include="Content\_assets\js\old-browsers.js" />
     <Content Include="Content\_assets\js\print.js" />
     <Content Include="Content\_assets\js\prototype-recruit.js" />
