--- a/src/SFA.Apprenticeships.Domain.Entities.Raa/SFA.Apprenticeships.Domain.Entities.Raa.csproj
+++ b/src/SFA.Apprenticeships.Domain.Entities.Raa/SFA.Apprenticeships.Domain.Entities.Raa.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Api\ApiEndpoint.cs" />
     <Compile Include="Api\ApiUser.cs" />
     <Compile Include="ClaimTypes.cs" />
+    <Compile Include="Parties\VacancyOwnerRelationshipStatusTypes.cs" />
     <Compile Include="RaaApi\RaaApiUser.cs" />
     <Compile Include="RaaApi\RaaApiUserType.cs" />
     <Compile Include="ICreatableEntity.cs" />
