RA-632: Starting work on a new, unified address service

--- a/src/SFA.Apprenticeships.Infrastructure.Postcode/SFA.Apprenticeships.Infrastructure.Postcode.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Postcode/SFA.Apprenticeships.Infrastructure.Postcode.csproj
@@ -129,6 +129,8 @@
     <Compile Include="Rest\IRestService.cs" />
     <Compile Include="Rest\RestService.cs" />
     <Compile Include="RetrieveAddressService.cs" />
+    <Compile Include="Strategies\GetValidatedGeocodedPostalAddressStrategy.cs" />
+    <Compile Include="Strategies\IGetValidatedGeocodedPostalAddressStrategy.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SFA.Apprenticeships.Application.Interfaces\SFA.Apprenticeships.Application.Interfaces.csproj">
