--- a/src/SFA.Apprenticeships.Application.Location/SFA.Apprenticeships.Application.Location.csproj
+++ b/src/SFA.Apprenticeships.Application.Location/SFA.Apprenticeships.Application.Location.csproj
@@ -89,6 +89,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\SharedAssemblyInfo.cs">
