--- a/src/SFA.Apprenticeships.Infrastructure.Postcode/SFA.Apprenticeships.Infrastructure.Postcode.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Postcode/SFA.Apprenticeships.Infrastructure.Postcode.csproj
@@ -79,6 +79,10 @@
     <Reference Include="CuttingEdge.Conditions">
       <HintPath>..\packages\CuttingEdge.Conditions.1.2.0.0\lib\NET35\CuttingEdge.Conditions.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="RestSharp, Version=105.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\RestSharp.105.1.0\lib\net451\RestSharp.dll</HintPath>
@@ -114,6 +118,8 @@
     <Compile Include="Entities\PostcodeSearchInfo.cs" />
     <Compile Include="Entities\PostcodeInfo.cs" />
     <Compile Include="Entities\PostcodeInfoResult.cs" />
+    <Compile Include="Entities\Postzon.cs" />
+    <Compile Include="ErrorCodes.cs" />
     <Compile Include="FindPostcodeService.cs" />
     <Compile Include="GeoCodeLookupProvider.cs" />
     <Compile Include="Configuration\GeoCodingServiceConfiguration.cs" />
@@ -129,8 +135,8 @@
     <Compile Include="Rest\IRestService.cs" />
     <Compile Include="Rest\RestService.cs" />
     <Compile Include="RetrieveAddressService.cs" />
-    <Compile Include="Strategies\GetValidatedGeocodedPostalAddressStrategy.cs" />
-    <Compile Include="Strategies\IGetValidatedGeocodedPostalAddressStrategy.cs" />
+    <Compile Include="Strategies\PostalAddressStrategy.cs" />
+    <Compile Include="Strategies\IPostalAddressStrategy.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SFA.Apprenticeships.Application.Interfaces\SFA.Apprenticeships.Application.Interfaces.csproj">
