--- a/src/SFA.Apprenticeships.Infrastructure.Postcode/packages.config
+++ b/src/SFA.Apprenticeships.Infrastructure.Postcode/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CuttingEdge.Conditions" version="1.2.0.0" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net451" />
   <package id="RestSharp" version="105.1.0" targetFramework="net451" />
   <package id="structuremap" version="3.1.6.186" targetFramework="net451" />
 </packages>
