--- a/src/SFA.Apprenticeships.Web.Common/SFA.Apprenticeships.Web.Common.csproj
+++ b/src/SFA.Apprenticeships.Web.Common/SFA.Apprenticeships.Web.Common.csproj
@@ -90,11 +90,11 @@
     </Reference>
     <Reference Include="CuttingEdge.Conditions">
       <HintPath>..\packages\CuttingEdge.Conditions.1.2.0.0\lib\NET35\CuttingEdge.Conditions.dll</HintPath>
-    </Reference>  
+    </Reference>
     <Reference Include="FluentValidation, Version=6.2.1.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\FluentValidation.6.2.1.0\lib\Net45\FluentValidation.dll</HintPath>
       <Private>True</Private>
-    </Reference> 
+    </Reference>
     <Reference Include="FluentValidation.Mvc, Version=6.2.1.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\FluentValidation.MVC5.6.2.1.0\lib\Net45\FluentValidation.Mvc.dll</HintPath>
       <Private>True</Private>
@@ -621,13 +621,13 @@
     <Content Include="Content\libs\vendor\jquery.scrollTableBody-1.0.0.js" />
     <Content Include="Content\libs\vendor\jquery.validate-vsdoc.js" />
     <Content Include="Content\libs\vendor\jquery.validate.js" />
-    <Content Include="Content\libs\vendor\jquery.validate.min.js" />
     <Content Include="Content\libs\vendor\jquery.validate.unobtrusive.custom.js" />
     <Content Include="Content\libs\vendor\jquery.validate.unobtrusive.js" />
     <Content Include="Content\libs\vendor\jquery.validate.unobtrusive.min.js" />
     <Content Include="Content\libs\vendor\jstorage.js" />
     <Content Include="Content\libs\vendor\knockout-3.1.0.debug.js" />
     <Content Include="Content\libs\vendor\knockout-3.1.0.js" />
+    <Content Include="Content\libs\vendor\knockout.mapping-latest.js" />
     <Content Include="Content\libs\vendor\knockout.validation.debug.js" />
     <Content Include="Content\libs\vendor\knockout.validation.js" />
     <Content Include="Content\libs\vendor\modernizr-2.7.1.js" />
